--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,17 @@
         android:theme="@style/Theme.DYP"
         tools:targetApi="31">
         <activity
+            android:name=".CivilLabs"
+            android:exported="false"
+             />
+        <activity
+            android:name=".MechanicalLab"
+            android:exported="false"
+            />
+        <activity
             android:name=".ElectricalLab"
             android:exported="false"
-            android:label="@string/title_activity_electrical_lab"
-            android:theme="@style/Theme.DYP" />
+            />
         <activity
             android:name=".CSE_lab"
             android:exported="false" />
